<resources>
    <string name="app_name">TiendApp</string>
    <string name="title_activity_act__manage__client">Manejo de Clientes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Manage_Client">Manejo de Clientes</string>
    <string name="Manage_message">Administre aquí sus clientes: </string>
    <string name="Icon">Icon</string>
    <string name="NewClient">Nuevo Cliente</string>
    <string name="EditClient">Editar Cliente</string>
    <string name="DeleteClient">Eliminar Cliente</string>
    <string name="title_activity_act__new_client">Agregar Nuevo Cliente</string>
    <string name="name">Nombre: </string>
    <string name="Enter_here">Ingrese aquí</string>
    <string name="Reviewing">Revisando...</string>
    <string name="description">Descripción: </string>
    <string name="debt">Deuda: </string>
    <string name="create">Crear Nuevo</string>
    <string name="zero">0.00</string>
    <string name="accepted">Nombre aceptado</string>
    <string name="already_created">Nombre existente</string>
    <string name="empty">Campo Vacío</string>
    <string name="newClientCreated">NUEVO CLIENTE CREADO:</string>
    <string name="Successfully">CORRECTO! </string>
    <string name="search">Buscar</string>
    <string name="title_activity_search_client">Buscar cliente</string>
    <string name="searchClient">Buscar Cliente</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_act__delete__client">Desea eliminar cliente?</string>
    <string name="rely">Confiable?: </string>
    <string name="cancel">Cancelar</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="title_activity_act_edit_client">Editar cliente</string>
    <string name="Save_Information">Guardar Información</string>
    <string name="title_activity_act__client_details">Detalles del cliente</string>
    <string name="add">Añadir</string>
    <string name="sumatory">20.0 + 2.5 + 0.25</string>
    <string name="value">123.25</string>
    <string name="sign">+</string>
    <string name="notes">Anotes:</string>
    <string name="total">Total:</string>
    <string name="add_description">Añadir descripción: </string>
    <string name="NoteDetails">Detalles de la nota</string>
    <string name="change_description">Cambiar descripción</string>
    <string name="title_activity_act__edit__note">Editar nota - Detalles de la nota</string>
    <string name="delete_note">Eliminar nota</string>
    <string name="delete_note_dialog">Desea eliminar esta nota?</string>
    <string name="current_account">Cuenta actual</string>
    <string name="last_account">Anterior cuenta: </string>
    <string name="accept">Aceptar</string>
    <string name="title_activity_act__details_all">Detalles de cuenta anterior</string>
    <string name="title_activity_act_create_new_account">Crear Nueva cuenta</string>
    <string name="title_activity_act__new__account">Empezar Nueva Cuenta</string>
</resources>
