<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/note_back"
    android:orientation="vertical"
    tools:context="com.borreguin.tiendapp.Act_See_Note">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@id/clientName"
            android:gravity="left"
            android:textSize="23dp"
            android:textColor="@color/title"
            android:textStyle="bold|italic"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/clientName"
            android:text="@string/total"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="24sp"
            android:textStyle="bold"
            android:id="@+id/txt_tag"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/clientName"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toRightOf="@id/txt_tag"
            android:id="@+id/txt_Deft"
            android:layout_marginLeft="30sp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center_vertical|center"
            android:hint="@string/zero"
            android:inputType="numberDecimal|numberSigned"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/edt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:clickable="true"
            android:textSize="22sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/description"
            android:textColor="@color/black"
            android:layout_below="@+id/edt_date"
            android:id="@+id/txt_desc"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <com.borreguin.tiendapp.Utilities.LinedEditText
            android:id="@+id/txt_notes"
            android:layout_width="match_parent"
            android:padding="8sp"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_desc"
            android:layout_above="@+id/btn_editNote"
            android:gravity="start"
            android:textSize="22sp"
            android:scrollbars="vertical"
            android:hint="@string/Enter_here"
            android:background="@drawable/background_note"
            android:inputType="textMultiLine|textAutoComplete"/>

        <Button
            android:id="@+id/btn_editNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_alignParentBottom="true"
            android:text="@string/accept"
            />

    </RelativeLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>

