<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.borreguin.tiendapp.Act_Edit_client">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/title"
                android:text="@string/name" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:textSize="18sp"
                    android:id="@+id/dte_clientName"
                    android:textColor="@color/colorPrimary"
                    />

                <Button
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_alignRight="@+id/dte_clientName"
                    android:background="@android:drawable/ic_menu_delete"
                    android:onClick="clean_clientName"/>

            </RelativeLayout>

            <TextView
                android:textColor="@color/title"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/description" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:textSize="18sp"
                    android:id="@+id/dte_clientDescription"
                    android:textColor="@color/colorPrimary"
                    />

                <Button
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:text=""
                    android:background="@android:drawable/ic_menu_delete"
                    android:layout_alignRight="@+id/dte_clientDescription"
                    android:onClick="clean_description"/>

            </RelativeLayout>


            <TextView
                android:textColor="@color/title"
                android:id="@+id/debt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/debt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dte_editDebt"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/zero"
                    android:textColor="@color/colorPrimary"
                    android:inputType="numberDecimal|numberSigned" />

                <Button
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:text=""
                    android:background="@android:drawable/ic_menu_delete"
                    android:layout_alignRight="@+id/dte_editDebt"
                    android:onClick="clean_debt"/>



            </RelativeLayout>

            <Switch
                android:id="@+id/swRelyClient"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textOn="@string/yes"
                android:textStyle="bold"
                android:textOff="@string/no"
                android:textColorHint="@color/colorPrimary"
                android:switchMinWidth="90dp"
                android:text="@string/rely" />


            <Button
                android:id="@+id/btnEditClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/Save_Information"
                android:textSize="19sp"
                android:background="@android:color/holo_orange_light"

                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchClient"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:textSize="19sp"
                android:background="@android:color/darker_gray"
                android:id="@+id/btnSearchClient" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="19sp"
                android:background="@android:color/darker_gray"
                android:id="@+id/btnMainActivity" />

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="?android:attr/windowBackground"
                app:menu="@menu/navigation" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
