<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/note_back"
    android:orientation="vertical"
    tools:context="com.borreguin.tiendapp.Act_Edit_Note">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@id/clientName"
            android:gravity="left"
            android:textSize="23dp"
            android:textColor="@color/title"
            android:textStyle="bold|italic"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <Button
            android:id="@+id/btn_deleteNote"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/trash_20"
            />


    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/btn_addDeft"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@android:drawable/ic_input_add"
            />

        <Button
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/btn_lessDeft"
            android:layout_toLeftOf="@+id/btn_addDeft"
            android:background="@drawable/minus"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/total"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="24sp"
            android:textStyle="bold"
            android:id="@+id/txt_tag"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txt_tag"
            android:id="@+id/txt_Deft"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="20sp"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:gravity="center_vertical|center"
            android:hint="@string/zero"
            android:textColorHint="@color/gray"
            android:inputType="numberDecimal|numberSigned"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">


        <EditText
            android:id="@+id/edt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="232dp"
            android:layout_marginRight="232dp"
            android:ems="10"
            android:clickable="true"
            android:textSize="22sp"
            android:focusable="false"
            android:inputType="date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_description"
            android:textColor="@color/black"
            android:layout_below="@+id/edt_date"
            android:id="@+id/txt_desc"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <com.borreguin.tiendapp.Utilities.LinedEditText
            android:id="@+id/txt_notes"
            android:layout_width="match_parent"
            android:padding="8sp"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_desc"
            android:layout_above="@+id/btn_editNote"
            android:gravity="start"
            android:textSize="22sp"
            android:scrollbars="vertical"
            android:hint="@string/Enter_here"
            android:textColorHint="@color/gray"
            android:background="@drawable/background_note"
            android:inputType="textMultiLine|textAutoComplete"/>

        <Button
            android:id="@+id/btn_editNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_alignParentBottom="true"
            android:text="@string/Save_Information"
            android:background="@android:color/holo_blue_dark"
            />

    </RelativeLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
